kubernetes/apps/kubescape/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-apiserver-storage
  namespace: kubescape
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: storage
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-apiserver
  namespace: kubescape
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
          - operator
          - kubescape
          - kubevuln
          - storage
          - node-agent
          - kubescape-scheduler
          - kubevuln-scheduler
  egress:
    - toEntities:
        - host
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-kubescape-external
  namespace: kubescape
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: kubescape
  egress:
    - toFQDNs:
        - matchName: "github.com"
        - matchPattern: "*.github.com"
        - matchPattern: "*.githubusercontent.com"
        - matchPattern: "*.armosec.io"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
