kubernetes/apps/kubescape/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: kubescape
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: kubescape
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-operator
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              armo.tier: kubescape-scan
        - podSelector:
            matchLabels:
              armo.tier: vuln-scan
      ports:
        - port: 4002
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-kubescape
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kubescape
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: operator
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-prometheus-exporter
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-kubevuln
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kubevuln
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: operator
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-operator
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: operator
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: kubescape
      ports:
        - port: 8080
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: kubevuln
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-kubescape
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kubescape
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: storage
      ports:
        - port: 8443
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: kubevuln
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-kubevuln
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kubevuln
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-storage
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: storage
  policyTypes:
    - Egress
  egress:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-kubescape-scheduler
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kubescape-scheduler
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: operator
      ports:
        - port: 4002
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-kubevuln-scheduler
  namespace: kubescape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kubevuln-scheduler
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: operator
      ports:
        - port: 4002
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-apiserver-storage
  namespace: kubescape
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: storage
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-apiserver
  namespace: kubescape
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
          - operator
          - kubescape
          - kubevuln
          - storage
          - node-agent
          - prometheus-exporter
          - kubescape-scheduler
          - kubevuln-scheduler
  egress:
    - toEntities:
        - host
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-kubescape-external
  namespace: kubescape
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: kubescape
  egress:
    - toFQDNs:
        - matchName: "github.com"
        - matchPattern: "*.github.com"
        - matchPattern: "*.githubusercontent.com"
        - matchPattern: "*.armosec.io"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
